@@ -737,8 +737,12 @@ $output: OutputPage object in use
 $catpage: CategoryPage instance
 
 'ChangePasswordForm': For extensions that need to add a field to the ChangePassword form
-via the Preferences form
+via the Preferences form (deprecated).
 &$extraFields: An array of arrays that hold fields like would be passed to the pretty function.
+
+'ChangePasswordFields': For extensions that need to add a field to the ChangePassword form
+via the Preferences form
+&$a: An array of HTMLForm-style fields.
 
 'ChangesListInsertArticleLink': Override or augment link to article in RC list.
 &$changesList: ChangesList instance.
